[metadata]
root_url = https://github.com/thorwhalen/
license = apache-2.0
author = Thor Whalen
version = 0.0.1
description = Access kroki from python
description_file = README.md
long_description = file:README.md
long_description_content_type = text/markdown
keywords = 
		
name = kroki
display_name = kroki

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires =
    i2
    requests
    IPython
		

