[metadata]
name = kroki
version = 0.1.5
url = https://github.com/thorwhalen/kroki
platforms = any
description_file = README.md
root_url = https://github.com/thorwhalen/
license = apache-2.0
author = Thor Whalen
description = Access kroki from python
long_description = file:README.md
long_description_content_type = text/markdown
keywords = 
display_name = kroki

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires = 
	i2
	requests
	IPython

